--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,13 @@ user  nginx;
 worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
-load_module /usr/lib/nginx/modules/ngx_http_geoip2_module.so; # GeoIP2
+load_module /etc/nginx/modules/ngx_http_geoip2_module.so; # GeoIP2
+load_module /etc/nginx/modules/ngx_rtmp_module.so
 events {
     worker_connections  1024;
 }
 http {
-    variables_hash_bucket_size 64;
+	variables_hash_bucket_size 64;
     variables_hash_max_size 2048;
     server_tokens off;
     sendfile    on;
@@ -45,25 +46,25 @@ http {
     	$geoip2_data_country_name country names en;
     	$geoip2_data_country_is_eu country is_in_european_union;
     }
-    #geoip2 /usr/share/geoip/GeoLite2-City.mmdb { 
+    #geoip2 /usr/share/geoip/GeoLite2-City.mmdb {
     #	$geoip2_data_city_name city names en;
-	 #	$geoip2_data_city_geonameid city geoname_id;
-	 #	$geoip2_data_continent_code continent code;
-	 #	$geoip2_data_continent_geonameid continent geoname_id;
-	 #	$geoip2_data_continent_name continent names en;
-	 #	$geoip2_data_location_accuracyradius location accuracy_radius;
-	 #	$geoip2_data_location_latitude location latitude;
-	 #	$geoip2_data_location_longitude location longitude;
-	 #	$geoip2_data_location_metrocode location metro_code;
-	 #	$geoip2_data_location_timezone location time_zone;
-	 #	$geoip2_data_postal_code postal code;
-	 #	$geoip2_data_rcountry_geonameid registered_country geoname_id;
-	 #	$geoip2_data_rcountry_iso registered_country iso_code;
-	 #	$geoip2_data_rcountry_name registered_country names en;
-	 #	$geoip2_data_rcountry_is_eu registered_country is_in_european_union;
-	 #	$geoip2_data_region_geonameid subdivisions 0 geoname_id;
-	 #	$geoip2_data_region_iso subdivisions 0 iso_code;
-	 #	$geoip2_data_region_name subdivisions 0 names en;
+	#	$geoip2_data_city_geonameid city geoname_id;
+	#	$geoip2_data_continent_code continent code;
+	#	$geoip2_data_continent_geonameid continent geoname_id;
+	#	$geoip2_data_continent_name continent names en;
+	#	$geoip2_data_location_accuracyradius location accuracy_radius;
+	#	$geoip2_data_location_latitude location latitude;
+	#	$geoip2_data_location_longitude location longitude;
+	#	$geoip2_data_location_metrocode location metro_code;
+	#	$geoip2_data_location_timezone location time_zone;
+	#	$geoip2_data_postal_code postal code;
+	#	$geoip2_data_rcountry_geonameid registered_country geoname_id;
+	#	$geoip2_data_rcountry_iso registered_country iso_code;
+	#	$geoip2_data_rcountry_name registered_country names en;
+	#	$geoip2_data_rcountry_is_eu registered_country is_in_european_union;
+	#	$geoip2_data_region_geonameid subdivisions 0 geoname_id;
+	#	$geoip2_data_region_iso subdivisions 0 iso_code;
+	#	$geoip2_data_region_name subdivisions 0 names en;
    #}
 
 #=================Basic Compression=================#
