--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 load_module /etc/nginx/modules/ngx_http_geoip2_module.so; # GeoIP2
-load_module /etc/nginx/modules/ngx_rtmp_module.so
+load_module /etc/nginx/modules/ngx_rtmp_module.so;
 events {
     worker_connections  1024;
 }
