--- a/nginx.conf
+++ b/nginx.conf
@@ -1,83 +1,177 @@
-user  nginx;
-worker_processes  1;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-load_module /etc/nginx/modules/ngx_http_geoip2_module.so; # GeoIP2
-load_module /etc/nginx/modules/ngx_rtmp_module.so;
-events {
-    worker_connections  1024;
-}
-http {
-	variables_hash_bucket_size 64;
-    variables_hash_max_size 2048;
-    server_tokens off;
-    sendfile    on;
-    tcp_nopush  on;
-    tcp_nodelay on;
-    autoindex off;
-    keepalive_timeout  30;
-    types_hash_bucket_size 256;
-    client_max_body_size 100m;
-    server_names_hash_bucket_size 256;
-    #set_real_ip_from  xxx.xxx.xxx.xxx;
-    real_ip_header    X-Forwarded-For;
-    real_ip_recursive on;
-    include 		mime.types;
-    default_type 	application/octet-stream;
+FROM alpine:latest
 
-    index  index.php index.html index.htm;
-    # GeoIP2
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+COPY GeoLite2-Country.mmdb /usr/share/geoip/
 
-    # GeoIP2
-    log_format  main_geo  '$remote_addr - $remote_user [$time_local] "$request" '
-                          '$status $body_bytes_sent "$http_referer" '
-                          '"$http_user_agent" "$http_x_forwarded_for" '
-                          '$geoip2_data_country_iso $geoip2_data_country_name';
+# ngx_http_geoip2_module & libmaxminddb installation
 
-    access_log  /var/log/nginx/access.log  main_geo; # GeoIP2
-#===================== GEOIP2 =====================#
-    geoip2 /usr/share/geoip/GeoLite2-Country.mmdb {
-    	$geoip2_metadata_country_build metadata build_epoch;
-    	$geoip2_data_country_geonameid country geoname_id;
-    	$geoip2_data_country_iso country iso_code;
-    	$geoip2_data_country_name country names en;
-    	$geoip2_data_country_is_eu country is_in_european_union;
-    }
-    #geoip2 /usr/share/geoip/GeoLite2-City.mmdb {
-    #	$geoip2_data_city_name city names en;
-	#	$geoip2_data_city_geonameid city geoname_id;
-	#	$geoip2_data_continent_code continent code;
-	#	$geoip2_data_continent_geonameid continent geoname_id;
-	#	$geoip2_data_continent_name continent names en;
-	#	$geoip2_data_location_accuracyradius location accuracy_radius;
-	#	$geoip2_data_location_latitude location latitude;
-	#	$geoip2_data_location_longitude location longitude;
-	#	$geoip2_data_location_metrocode location metro_code;
-	#	$geoip2_data_location_timezone location time_zone;
-	#	$geoip2_data_postal_code postal code;
-	#	$geoip2_data_rcountry_geonameid registered_country geoname_id;
-	#	$geoip2_data_rcountry_iso registered_country iso_code;
-	#	$geoip2_data_rcountry_name registered_country names en;
-	#	$geoip2_data_rcountry_is_eu registered_country is_in_european_union;
-	#	$geoip2_data_region_geonameid subdivisions 0 geoname_id;
-	#	$geoip2_data_region_iso subdivisions 0 iso_code;
-	#	$geoip2_data_region_name subdivisions 0 names en;
-   #}
+ENV MAXMIND_VERSION=1.5.0
 
-#=================Basic Compression=================#
-    gzip on;
-    gzip_disable "msie6";
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/css text/xml text/plain application/javascript image/jpeg image/png image/gif image/x-icon image/svg+xml image/webp application/font-woff application/json application/vnd.ms-fontobject application/vnd.ms-powerpoint;
-    gzip_static on;
+RUN set -x \
+  && apk add --no-cache --virtual .build-deps \
+    alpine-sdk \
+    perl \
+  && git clone https://github.com/leev/ngx_http_geoip2_module /ngx_http_geoip2_module \
+  && wget https://github.com/maxmind/libmaxminddb/releases/download/${MAXMIND_VERSION}/libmaxminddb-${MAXMIND_VERSION}.tar.gz \
+  && tar xf libmaxminddb-${MAXMIND_VERSION}.tar.gz \
+  && cd libmaxminddb-${MAXMIND_VERSION} \
+  && ./configure \
+  && make \
+  && make check \
+  && make install \
+  && apk del .build-deps
 
-#=================Configuration Files=================#
-    include /etc/nginx/conf.d/*.conf;
-}
+RUN ldconfig || :
+
+# Nginx installation 
+
+ENV NGINX_VERSION 1.19.6
+RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
+&& CONFIG="\
+    --prefix=/etc/nginx \
+    --sbin-path=/usr/sbin/nginx \
+    --modules-path=/usr/lib/nginx/modules \
+    --conf-path=/etc/nginx/nginx.conf \
+    --error-log-path=/var/log/nginx/error.log \
+    --http-log-path=/var/log/nginx/access.log \
+    --pid-path=/var/run/nginx.pid \
+    --lock-path=/var/run/nginx.lock \
+    --http-client-body-temp-path=/var/cache/nginx/client_temp \
+    --http-proxy-temp-path=/var/cache/nginx/proxy_temp \
+    --http-fastcgi-temp-path=/var/cache/nginx/fastcgi_temp \
+    --http-uwsgi-temp-path=/var/cache/nginx/uwsgi_temp \
+    --http-scgi-temp-path=/var/cache/nginx/scgi_temp \
+    --user=nginx \
+    --group=nginx \
+    --with-http_ssl_module \
+    --with-http_realip_module \
+    --with-http_addition_module \
+    --with-http_sub_module \
+    --with-http_dav_module \
+    --with-http_flv_module \
+    --with-http_mp4_module \
+    --with-http_gunzip_module \
+    --with-http_gzip_static_module \
+    --with-http_random_index_module \
+    --with-http_secure_link_module \
+    --with-http_stub_status_module \
+    --with-http_auth_request_module \
+    --with-http_xslt_module=dynamic \
+    --with-http_image_filter_module=dynamic \
+    --with-http_geoip_module=dynamic \
+    --with-threads \
+    --with-stream \
+    --with-stream_ssl_module \
+    --with-stream_ssl_preread_module \
+    --with-stream_realip_module \
+    --with-stream_geoip_module=dynamic \
+    --with-http_slice_module \
+    --with-mail \
+    --with-mail_ssl_module \
+    --with-compat \
+    --with-file-aio \
+    --with-http_v2_module \
+    --with-openssl-opt="enable-tls1_3" \
+    --add-dynamic-module=/ngx_http_geoip2_module \
+    --add-dynamic-module=/nginx-rtmp-module \
+" \
+    && addgroup -S nginx \
+    && adduser -D -S -h /var/cache/nginx -s /sbin/nologin -G nginx nginx \
+    && apk add --no-cache --virtual .build-deps \
+        gcc \
+        git \
+        libc-dev \
+        make \
+        openssl-dev \
+        pcre-dev \
+        zlib-dev \
+        linux-headers \
+        curl \
+        gnupg1 \
+        libxslt-dev \
+        gd-dev \
+        geoip-dev \
+    && curl -fSL https://nginx.org/download/nginx-$NGINX_VERSION.tar.gz -o nginx.tar.gz \
+    && curl -fSL https://nginx.org/download/nginx-$NGINX_VERSION.tar.gz.asc  -o nginx.tar.gz.asc \
+    && export GNUPGHOME="$(mktemp -d)" \
+    && found=''; \
+    for server in \
+        ha.pool.sks-keyservers.net \
+        hkp://keyserver.ubuntu.com:80 \
+        hkp://p80.pool.sks-keyservers.net:80 \
+        pgp.mit.edu \
+    ; do \
+        echo "Fetching GPG key $GPG_KEYS from $server"; \
+        gpg --keyserver "$server" --keyserver-options timeout=10 --recv-keys "$GPG_KEYS" && found=yes && break; \
+    done; \
+    test -z "$found" && echo >&2 "error: failed to fetch GPG key $GPG_KEYS" && exit 1; \
+    gpg --batch --verify nginx.tar.gz.asc nginx.tar.gz \
+    && rm -rf "$GNUPGHOME" nginx.tar.gz.asc \
+    && mkdir -p /usr/src \
+    && git clone https://github.com/sergey-dryabzhinsky/nginx-rtmp-module.git \
+    && tar -zxC /usr/src -f nginx.tar.gz \
+    && rm nginx.tar.gz \
+    && cd /usr/src/nginx-$NGINX_VERSION \
+    && ./configure $CONFIG --with-debug \
+    && make -j$(getconf _NPROCESSORS_ONLN) \
+    && mv objs/nginx objs/nginx-debug \
+    && mv objs/ngx_http_xslt_filter_module.so objs/ngx_http_xslt_filter_module-debug.so \
+    && mv objs/ngx_http_image_filter_module.so objs/ngx_http_image_filter_module-debug.so \
+    && mv objs/ngx_http_geoip_module.so objs/ngx_http_geoip_module-debug.so \
+    && mv objs/ngx_stream_geoip_module.so objs/ngx_stream_geoip_module-debug.so \
+    && ./configure $CONFIG \
+    && make -j$(getconf _NPROCESSORS_ONLN) \
+    && make install \
+    && rm -rf /etc/nginx/html/ \
+    && mkdir /etc/nginx/conf.d/ \
+    && mkdir -p /usr/share/nginx/html/ \
+    && install -m644 html/index.html /usr/share/nginx/html/ \
+    && install -m644 html/50x.html /usr/share/nginx/html/ \
+    && install -m755 objs/nginx-debug /usr/sbin/nginx-debug \
+    && install -m755 objs/ngx_http_xslt_filter_module-debug.so /usr/lib/nginx/modules/ngx_http_xslt_filter_module-debug.so \
+    && install -m755 objs/ngx_http_image_filter_module-debug.so /usr/lib/nginx/modules/ngx_http_image_filter_module-debug.so \
+    && install -m755 objs/ngx_http_geoip_module-debug.so /usr/lib/nginx/modules/ngx_http_geoip_module-debug.so \
+    && install -m755 objs/ngx_stream_geoip_module-debug.so /usr/lib/nginx/modules/ngx_stream_geoip_module-debug.so \
+    && install -m755 objs/ngx_stream_geoip_module-debug.so /usr/lib/nginx/modules/ngx_stream_geoip_module-debug.so \
+    && ln -s ../../usr/lib/nginx/modules /etc/nginx/modules \
+    && strip /usr/sbin/nginx* \
+    && strip /usr/lib/nginx/modules/*.so \
+    && rm -rf /usr/src/nginx-$NGINX_VERSION \
+    && rm -rf /usr/src/nginx-rtmp-module \
+    && cd /                 \
+    && rm -rf libmaxminddb-${MAXMIND_VERSION} \
+    && rm -rf libmaxminddb-${MAXMIND_VERSION}.tar.gz \
+    && rm -rf ngx_http_geoip2_module \
+    && rm -rf nginx-rtmp-module \
+    \
+    # Bring in gettext so we can get `envsubst`, then throw
+    # the rest away. To do this, we need to install `gettext`
+    # then move `envsubst` out of the way so `gettext` can
+    # be deleted completely, then move `envsubst` back.
+    && apk add --no-cache --virtual .gettext gettext \
+    && mv /usr/bin/envsubst /tmp/ \
+    \
+    && runDeps="$( \
+        scanelf --needed --nobanner --format '%n#p' /usr/sbin/nginx /usr/lib/nginx/modules/*.so /tmp/envsubst \
+            | tr ',' '\n' \
+            | sort -u \
+            | awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
+    )" \
+    && apk add --no-cache --virtual .nginx-rundeps $runDeps \
+    && apk del .build-deps \
+    && apk del .gettext \
+    && mv /tmp/envsubst /usr/local/bin/ \
+    \
+    # Bring in tzdata and openssl so users could set the timezones and tls1.3 through the environment
+    # variables
+    && apk add --no-cache tzdata \
+    \
+    # forward request and error logs to docker log collector
+    && ln -sf /dev/stdout /var/log/nginx/access.log \
+    && ln -sf /dev/stderr /var/log/nginx/error.log
+
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY vh-default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80 443
+STOPSIGNAL SIGTERM
+CMD ["nginx", "-g", "daemon off;"]
