--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,14 +1,9 @@
 language: bash
+
 sudo: required
+
 services:
   - docker
 
-before_install:
-  - docker build . -t admintuts/nginx:1.19.7-rtmp-geoip2-alpine --no-cache
-
 script:
-  - docker run -t --name webserver --rm  admintuts/nginx:1.19.7-rtmp-geoip2-alpine nginx -v
-
-after_success:
-  - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
-  - docker push admintuts/nginx:1.19.7-rtmp-geoip2-alpine
+  - echo "hello world"
