Updated virtual host with examples + README update

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,17 +7,20 @@ events {
     worker_connections  1024;
 }
 http {
-	variables_hash_bucket_size 64;
-    variables_hash_max_size 2048;
-    server_tokens off;
+    variables_hash_bucket_size 1024;
+    variables_hash_max_size 1024;
+    map_hash_max_size 1024;
+    map_hash_bucket_size 512;
+    types_hash_bucket_size 512;
+    server_names_hash_bucket_size 512;
     sendfile    on;
-    tcp_nopush  on;
     tcp_nodelay on;
+    tcp_nopush  on;
     autoindex off;
-    keepalive_timeout  30;
-    types_hash_bucket_size 256;
+    server_tokens off;
+    keepalive_timeout  15;
     client_max_body_size 100m;
-    server_names_hash_bucket_size 256;
+
     #set_real_ip_from  xxx.xxx.xxx.xxx;
     real_ip_header    X-Forwarded-For;
     real_ip_recursive on;
@@ -34,7 +37,8 @@ http {
     log_format  main_geo  '$remote_addr - $remote_user [$time_local] "$request" '
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for" '
-                          '$geoip2_data_country_iso $geoip2_data_country_name';
+                          '$geoip2_data_country_iso $geoip2_data_country_name'
+                          '- EU Country: $geoip2_data_country_is_eu';
 
     access_log  /var/log/nginx/access.log  main_geo; # GeoIP2
 #===================== GEOIP2 =====================#
@@ -77,6 +81,21 @@ http {
     gzip_types text/css text/xml text/plain application/javascript image/jpeg image/png image/gif image/x-icon image/svg+xml image/webp application/font-woff application/json application/vnd.ms-fontobject application/vnd.ms-powerpoint;
     gzip_static on;
 
+#====Connection Upgrade For Websocket Connections====#
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
+#====Ban Countries Based On GeoIP2 ISO Code====#
+    # Uncomment iso code to ban
+    map $geoip2_data_country_iso $allowed_country {
+        default yes;
+        #CN no;
+        #UA no;
+        #IN no;
+        #RU no;
+    }
 #=================Configuration Files=================#
     include /etc/nginx/conf.d/*.conf;
 }
