--- a/vh-default.conf
+++ b/vh-default.conf
@@ -1,17 +1,37 @@
+#upstream chat {
+#    ip_hash;
+#    server 192.168.1.1:3000;
+#}
 server {
     listen       80;
     server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
+    ##===Ban/Drop Connections====#
+    if ($allowed_country = no) {
+    return 444;
+    }
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
+#   location /websocker_enabled_app {
+#       proxy_pass http://chat/;
+#       proxy_redirect      off;
+#       proxy_set_header    Host              $host;
+#       proxy_set_header    X-Real-IP         $remote_addr;
+#       proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+#       proxy_set_header    X-Forwarded-Proto $scheme;
 
-    #error_page  404              /404.html;
-
+      # WebSocket specific
+#       proxy_http_version 1.1;
+#       proxy_set_header    Upgrade           $http_upgrade;
+#       proxy_set_header    Connection        "upgrade";      
+#   }
+    
+    error_page  404              /404.html;
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504  /50x.html;
@@ -35,10 +55,17 @@ server {
     #    include        fastcgi_params;
     #}
 
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+    # deny access to .htaccess files, hidden files in document root
+    location ~ /\.ht {
+        deny  all;
+    }
+    location ~ /\. {
+        deny  all;
+        access_log off;
+        log_not_found off;
+    }
+    location = /robots.txt {
+        access_log off;
+        log_not_found off;
+    }
 }
