Added LetsEncrypt Compatibility by default

--- a/vh-default.conf
+++ b/vh-default.conf
@@ -12,7 +12,10 @@ server {
     if ($allowed_country = no) {
     return 444;
     }
-
+    ##===LetsEncrypt Compatibility===##
+    location ~ /.well-known {
+        allow all;
+    }
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
