--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
     default_type 	application/octet-stream;
 
     index  index.php index.html index.htm;
-    # GeoIP2
+    # Main
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -40,7 +40,7 @@ http {
                           '$geoip2_data_country_iso $geoip2_data_country_name'
                           '- EU Country: $geoip2_data_country_is_eu';
 
-    access_log  /var/log/nginx/access.log  main_geo; # GeoIP2
+    access_log  /var/log/nginx/access.log  main_geo;
 #===================== GEOIP2 =====================#
     geoip2 /usr/share/geoip/GeoLite2-Country.mmdb {
     	$geoip2_metadata_country_build metadata build_epoch;
