--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,20 +18,14 @@ jobs:
           chmod +x env.sh
           source env.sh
           sudo docker build . -t $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine --no-cache
+          docker push $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine
   test:
     executor: machine-executor
     working_directory: ~/nginx-build
     steps:
       - run: |
+          docker pull $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine
           docker run -t --name webserver --rm  $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine nginx -v
-  
-  deploy:
-    executor: machine-executor
-    working_directory: ~/nginx-build
-    steps:
-      - run: |
-          source env.sh
-          docker push $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine
 
 workflows:
   build_and_test:
@@ -40,6 +34,3 @@ workflows:
       - test:
           requires:
             - build
-      - deploy:
-          requires:
-            - test
