--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
           chmod +x tune-worker-processes.sh
           chmod +x env.sh
           source env.sh
-          sudo docker build . -t $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine --no-cache
-          docker push $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine
+          sudo docker build . -t $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine --no-cache
+          docker push $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine
   test:
     executor: machine-executor
     working_directory: ~/nginx-build
@@ -27,8 +27,8 @@ jobs:
       - run: |
           chmod +x env.sh
           source env.sh
-          docker pull $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine
-          docker run -t --name webserver --rm  $DOCKER_HUB_ID/nginx:$NGINX_VERSION-rtmp-geoip2-alpine nginx -v
+          docker pull $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine
+          docker run -t --name webserver --rm  $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine nginx -v
 
 workflows:
   build_and_test:
