--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
 - chmod +x tune-worker-processes.sh
 - chmod +x env.sh
 - source env.sh
-- docker build . -t $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine --no-cache
+- docker build . -t $DOCKER_HUB_ID/nginx:$NGX_VERSION-rtmp-geoip2-alpine --no-cache
 
 script:
-- docker run -t --name webserver --rm  $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine nginx -v
+- docker run -t --name webserver --rm  $DOCKER_HUB_ID/nginx:$NGX_VERSION-rtmp-geoip2-alpine nginx -v
 
 after_success:
 - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
-- docker push $DOCKER_HUB_ID/nginx:"${NGINX_VERSION}"-rtmp-geoip2-alpine
+- docker push $DOCKER_HUB_ID/nginx:$NGX_VERSION-rtmp-geoip2-alpine
