Harden Dockerfile and add HTTP/3 support
- Restore GPG signature verification for nginx tarball with
  current signing keys
- Add --with-http_v3_module and expose UDP port for QUIC
- Strip dynamic modules to reduce image size
- Create /docker-entrypoint.d directory for entrypoint compatibility
- Add .dockerignore to exclude .git and non-build files from context
- Add .gitignore
- Add GitHub Actions CI workflow for build validation
- Remove stale Travis CI and CircleCI configs
- Remove unused env.sh
- Set worker_processes to auto
- Add commented HTTP/3+SSL server block template to vh-default.conf

--- a/vh-default.conf
+++ b/vh-default.conf
@@ -2,6 +2,28 @@
 #    ip_hash;
 #    server 192.168.1.1:3000;
 #}
+
+##===HTTP/3 + SSL===##
+# Uncomment and configure the block below to enable HTTPS with HTTP/3 (QUIC)
+#server {
+#    listen       3443 ssl;
+#    listen       3443 quic;
+#    http2        on;
+#    server_name  localhost;
+#
+#    ssl_certificate      /etc/nginx/ssl/cert.pem;
+#    ssl_certificate_key  /etc/nginx/ssl/key.pem;
+#    ssl_protocols        TLSv1.2 TLSv1.3;
+#
+#    # Advertise HTTP/3 support to clients
+#    add_header Alt-Svc 'h3=":3443"; ma=86400' always;
+#
+#    location / {
+#        root   /usr/share/nginx/html;
+#        index  index.html index.htm;
+#    }
+#}
+
 server {
     listen       3080;
     server_name  localhost;
@@ -20,7 +42,7 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
-#   location /websocker_enabled_app {
+#   location /websocket_enabled_app {
 #       proxy_pass http://chat/;
 #       proxy_redirect      off;
 #       proxy_set_header    Host              $host;
@@ -34,10 +56,10 @@ server {
 #       proxy_set_header    Connection        "upgrade";      
 #   }
     
-    error_page  404              /404.html;
+    error_page  404   /404.html;
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
+    error_page 500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
