--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes  1;
+worker_processes auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 load_module /usr/lib/nginx/modules/ngx_http_geoip2_module.so; # GeoIP2
